<resources>
    <string name="app_name">Movie Collection</string>
    <string name="action_settings">Settings</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="hint_name_required">Movie Title (Required)</string>
    <string name="hint_email">Director</string>
    <string name="hint_phone">Year</string>
    <string name="hint_street">Writer</string>
    <string name="hint_city">Genre</string>

    <string name="label_name">Movie Title:</string>
    <string name="label_email">Director:</string>
    <string name="label_phone">Year:</string>
    <string name="label_street">Writer:</string>
    <string name="label_city">Genre:</string>

    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the contact</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_not_added">Contact was not added due to an error</string>
    <string name="contact_updated">Contact updated</string>
    <string name="contact_not_updated">Contact was not updated due to an error</string>
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="insert_failed">Insert Failed:</string>

    <string-array name="genre_array">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Family</item>
        <item>Horror</item>
        <item>Thriller</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_setting">Setting</string>
</resources>
