<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:useDefaultMargins="true"
    >

    <TextView
        android:id="@+id/nameLabelTextView"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/label_name" />

    <TextView
        android:id="@+id/nameTextView"
        style="@style/ContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/hint_name_required" />

    <TextView
        android:id="@+id/phoneLabelTextView"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/label_phone" />

    <TextView
        android:id="@+id/phoneTextView"
        style="@style/ContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/hint_phone" />

    <TextView
        android:id="@+id/emailLabelTextView"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/label_email" />

    <TextView
        android:id="@+id/emailTextView"
        style="@style/ContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/hint_email" />

    <TextView
        android:id="@+id/streetLabelTextView"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/label_street" />

    <TextView
        android:id="@+id/streetTextView"
        style="@style/ContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/hint_street" />

    <TextView
        android:id="@+id/genreLabel"
        style="@style/ContactLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="Genre:" />

    <TextView
        android:id="@+id/genreTextView"
        style="@style/ContactTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/hint_city" />

</GridLayout>